...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JdU-Ky-Nc8" userLabel="Like Button">
                                                    <rect key="frame" x="367" y="12" width="21" height="18"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like_button_off">
                                                        <bool key="isElement" value="YES"/>
                                                    </accessibility>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="18" id="bBG-hJ-RqC"/>
                                                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="21" id="enm-Nn-sQ7"/>
                                                    </constraints>
...
                                <connections>
                                    <outlet property="delegate" destination="Joc-5u-NiV" id="h2b-GP-PHe"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kAH-np-Agf" userLabel="Back Button">
                                <rect key="frame" x="17" y="67" width="9" height="22"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav_back_button"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="backward"/>
                                <connections>
                                    <action selector="didTapBackButton" destination="Joc-5u-NiV" eventType="touchUpInside" id="CFc-XH-ndK"/>
                                </connections>
                            </button>
...
                                    <constraint firstAttribute="width" constant="60" id="gnR-JK-poR"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UFD-NR-Ilk" userLabel="Enter Button">
                                <rect key="frame" x="16" y="709" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="h3y-AZ-iA5"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="tintColor" name="YP Black"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
